@startuml
'https://plantuml.com/class-diagram

class Overcooked {
+ jeu()
}

"Overcooked" --> "Joueur" : "joueurs[]"

interface Movable {
    + int[] coordonnees
    + getCoordonnees(): int[]
}

interface Joueur {
    + demanderAction(): Action
}
"Personnage" <-- "Joueur" : "personnage"

class JoueurHumain implements Joueur {
    + demanderAction(): Action
}

class JoueurIA implements Joueur {
    + demanderAction(): Action
}

class Personnage implements Movable {
    + int[] coordonnees
    + getCoordonnees(): int[]
}

class Aliment implements Movable {
    + int[] coordonnees
    + getCoordonnees(): int[]
}

class TempsDeJeu {
    + int temps
    + int intervalTemps
    + demarrerJeu(): void
    + terminerJeu(): void
    + demarrerTour(): void
    + terminerTour(): void
}

class DonneesJeu {
    + lireFileDonneesJeu()
}

interface Block {
    + int[] coordonnees
    + getCoordonnees(): int[]
}
"Block" <-- "DonneesJeu" : "objetsFixes[]"
"Movable" <-- "DonneesJeu" : "objetsDeplacables[]"
"DonneesJeu" <-- "Overcooked" : "donnees"
"TempsDeJeu" <-- "DonneesJeu" : "tempsDeJeu"



@enduml